include models in build

--- a/program.csproj
+++ b/program.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Content Include="shaders\**" CopyToPublishDirectory="PreserveNewest"/>
+    <Content Include="vox\**" CopyToPublishDirectory="PreserveNewest"/>
   </ItemGroup>
 
 </Project>
